N°4460 - Add css rule to fix poor contrast in tagset add action when using darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -181,6 +181,7 @@ $ibo-vendors-selectize-input--background-color: $ibo-input--background-color;
 $ibo-vendors-selectize--input--border-color: $ibo-input--border-color;
 $ibo-vendors-selectize--element--active--background: $ibo-color-grey-400;
 $ibo-vendors-selectize--element--active--color: $ibo-body-text-color;
+$ibo-vendors-selectize-control--plugin-add-button--add-option--color: $ibo-input-select--action-button--color;
 
 $ibo-popover-menu--item-separator--background-color: $ibo-color-grey-500;
 $ibo-popover-menu--item--text-color: $ibo-color-grey-200;
